Update URLs again, so they actually work

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="https://play.google.com/store/apps/details?id=com.trivia.buff">
                 <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
                 </a>
-                <a href="https://www.microsoft.com/store/apps/622dffdf-0eee-4395-b87d-e733db384f82"><img src="https://cmsresources.windowsphone.com/devcenter/en-us/legacy_v1/img/badgegenerator/English_wstore_black_258x67.png" alt="Download from Windows Store" height="43"/></a>
+                <a href="http://www.windowsphone.com/s?appid=622dffdf-0eee-4395-b87d-e733db384f82"><img src="https://cmsresources.windowsphone.com/devcenter/en-us/legacy_v1/img/badgegenerator/English_wstore_black_258x67.png" alt="Download from Windows Store" height="43"/></a>
 			</div>
 		</div>
 	</section>
@@ -90,7 +90,7 @@
 						<a href="https://play.google.com/store/apps/details?id=com.trivia.buff">
                         <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
                         </a>
-<a href="https://www.microsoft.com/store/apps/622dffdf-0eee-4395-b87d-e733db384f82"><img src="https://cmsresources.windowsphone.com/devcenter/en-us/legacy_v1/img/badgegenerator/English_wstore_black_258x67.png" alt="Download from Windows Store" height="43" /></a>
+						<a href="http://www.windowsphone.com/s?appid=622dffdf-0eee-4395-b87d-e733db384f82"><img src="https://cmsresources.windowsphone.com/devcenter/en-us/legacy_v1/img/badgegenerator/English_wstore_black_258x67.png" alt="Download from Windows Store" height="43" /></a>
 					</div>
 				</div>
 			</div>
